# subvocal

./: .gitignore  ARCHITECTURE.md  LICENSE  NOTICE.md  README.md  install.sh  package-lock.json  package.json
encode/: package.json  tsconfig.json
encode/src/: TagRegistry.gemma4.json  TagRegistry.json  agentLoop.ts  astEditor.ts  astTagger.ts  bytePayload.ts  compileValidator.ts  contextDistiller.ts  continuousPrefill.ts  debugLog.ts  debugTokenIds.ts  debugTopTokens.ts  dependencyGraph.ts  dualBrainPipeline.ts  dualBrainRouter.ts  filePrewarm.ts  foldTokens.ts  ideogramAllocator.ts  ideogramAnchorMap.gemma4.json  ideogramLogitProbe.ts  ideogramMapping.gemma4.json  ideogramSteering.ts  incrementalIntent.ts  index.ts  intentBench.ts  intentBenchDataset.ts  intentBenchSharedContext.ts  intentRouter.ts  intentWorker.ts  kvCacheManager.ts  kvColdStore.ts  largeModel.ts  lineCRCCache.ts  lineLevelCRC.ts  logitMaskGenerator.ts  lspShim.ts  modelProfile.ts  multiFileContext.ts  observationDistiller.ts  osSandbox.ts  (+19 more)
scripts/: package-full-bundle.sh  package-prebuilt.sh
subvocal-patches/: INDEX.md  README.md
subvocal-patches/llama-cpp-upstream/: 101-partial-forward.md  101-partial-forward.patch  102-compact-swa-iswa.md  102-compact-swa-iswa.patch
synapse/: CMakeLists.txt  package.json  tsconfig.json
synapse/scripts/: generate-tag-registry.ts
synapse/src/: index.ts  speculative-decoder.ts
synapse/src/native/: binding.cpp  binding_gpu.cpp  cuda_kernels.cu  cuda_kernels.h  git_binding.cpp  git_binding.h  kv_cache.cpp  kv_cache.h  logits_processor.cpp  logits_processor.h  suffix_tree_wrapper.cpp  suffix_tree_wrapper.h  text_scanner.cpp  text_scanner.h
utter/: README.md
